# intersect

./: .dockerignore  .gitignore  Dockerfile  Makefile.toml  README.md  docker-compose.yml
.github/workflows/: continuous_deployment.yml
intersect-cli/: Cargo.toml
intersect-cli/src/: app.rs  cli.rs  commands.rs  main.rs  prompt.rs  stderr.rs  ui.rs
intersect-cli/src/ui/: dialog.rs  mod.rs  state.rs  status.rs  theme.rs
intersect-cli/src/ui/panel/: account.rs  fragment.rs  index.rs  links.rs  mod.rs
intersect-core/: Cargo.toml  build.rs
intersect-core-old/src/: lib.rs  record.rs  veilid.rs
intersect-core-old/src/api/: fragment_record.rs  intersect.rs  links_record.rs
intersect-core-old/src/models/: encrypted.rs  index.rs  mod.rs  path.rs
intersect-core-v2/: Cargo.toml
intersect-core-v2/proto/: intersect.proto  veilid.proto
intersect-core-v2/src/: lib.rs  main.rs  proto.rs  serialisation.rs
intersect-core-v2/src/api/: document.rs  intersect.rs  mod.rs  reference.rs
intersect-core-v2/src/models/: access.rs  account.rs  encrypted.rs  mod.rs  trace.rs
intersect-core-v2/src/veilid/: connection.rs  mod.rs  record_pool.rs  updates.rs  watch_router.rs
intersect-core/proto/: intersect.proto  veilid.proto
intersect-core/src/: keys.rs  lib.rs  main.rs  proto.rs  record.rs  rw_helpers.rs  serialisation.rs  veilid.rs
intersect-core/src/api/: document.rs  domains.rs  fragment_record.rs  index_record.rs  intersect.rs  links_record.rs  mod.rs  reference.rs  trace.rs
intersect-core/src/documents/: account.rs  fragment.rs  index.rs  links.rs  mod.rs
intersect-core/src/models/: access.rs  account.rs  encrypted.rs  fragment.rs  index.rs  mod.rs  path.rs  reference.rs  trace.rs
intersect-core/src/veilid/: attachment_watcher.rs  connection.rs  mod.rs  network_state.rs  network_watcher.rs  record_pool.rs  updates.rs  watch_router.rs
intersect-glasses/: Cargo.toml  Trunk.toml  index.html
intersect-glasses-old/: Cargo.toml
intersect-glasses-old/.cargo/: config.toml
intersect-glasses-old/public/: document.scss  main.scss  page.scss  reset.scss  styles.scss  variables.scss
intersect-glasses-old/public/components/: document.scss  links.scss  login.scss  main.scss
intersect-glasses-old/src/: intersect.rs
intersect-glasses-old/src/components/: collapsible.rs  document.rs  editor.rs  form.rs  share_trace.rs  status.rs  text_input.rs
intersect-glasses-old/src/pages/: account.rs  home.rs  trace.rs
intersect-glasses/public/: base.scss  components.scss  fonts.scss  main.scss  page.scss  variables.scss
intersect-glasses/public/components/: collapsible.scss  form.scss  link.scss  modal.scss  selectable.scss  share_trace.scss  status.scss  text_input.scss
intersect-glasses/src/: intersect.rs  leptos_helpers.rs  main.rs  router.rs  session.rs  shell.rs  util.rs
intersect-glasses/src/components/: access_prompt.rs  account.rs  account.scss  account_link.rs  document.rs  document.scss  editor.rs  errors.rs  fragment.rs  fragment.scss  if_some.rs  link.rs  links.rs  links_add.rs  login.rs  login.scss  lookup.rs  mod.rs  modal.rs  nav.rs  nav.scss  network.rs  note.rs  note.scss  selectable.rs  status.rs  status.scss
intersect-glasses/src/components/base/: card.rs  card.scss  collapsible.rs  collapsible.scss  form.rs  link.rs  mod.rs  modal.rs  modal.scss  text_input.rs  text_input.scss
intersect-glasses/src/pages/: account.rs  edit.rs  home.rs  home.scss  mod.rs  not_found.rs  post.rs  trace.rs  view.rs
