[package]
name = "intersect-cli"
version = "0.1.0"
edition = "2021"
default-run = "intersect"

[dependencies]
intersect-core = { path = "../intersect-core", features = ["rt-tokio"] }
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.102"
ratatui = "0.30"
libc = "0.2"
shlex = "1.3"

[[bin]]
name = "intersect"
path = "src/main.rs"

[[bin]]
name = "isec"
path = "src/main.rs"
