[package]
name = "intersect-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["rt-tokio"]
rt-tokio = ["veilid-core/default", "veilid-tools/rt-tokio"]
rt-wasm = ["veilid-core/default-wasm", "veilid-tools/rt-wasm-bindgen"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
# veilid-core = "0.3.1"
# veilid-core = { path = "../../veilid/veilid-core", default-features = false }
veilid-core = { git = "https://gitlab.com/evelyn-h/veilid.git", branch = "create-record-with-owner", default-features = false }
# veilid-tools = { path = "../../veilid/veilid-tools", default-features = false }
veilid-tools = { git = "https://gitlab.com/evelyn-h/veilid.git", branch = "create-record-with-owner", default-features = false }
binrw = "0.13.3"
async-once-cell = "0.5.3"
# tokio = { version = "1.35.1", features = ["rt"] }
lazy-regex = "3.1.0"
tracing = { version = "^0", features = ["log", "attributes"] }
tracing-wasm = "^0"
tracing-subscriber = "^0"
itertools = "0.13.0"
base58 = "0.2.0"
futures = "0.3.30"
unicode-segmentation = "1.12.0"

# Dependencies non WASM builds
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# Dependencies for WASM builds only
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.69", features = ["console"] }

[dev-dependencies]
tokio-test = "0.4.4"
