[package]
name = "intersect-core"
version = "0.2.0"
edition = "2024"
rust-version = "1.88.0"

[features]
default = ["rt-tokio"]
rt-tokio = ["veilid-core/default", "veilid-tools/rt-tokio"]
rt-wasm = ["veilid-core/default-wasm", "veilid-tools/rt-wasm-bindgen"]


[dependencies]
# serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
veilid-core = { version = "0.5.2", default-features = false }
veilid-tools = { version = "0.5.2", default-features = false }
# gotta be careful to not pull in features that depend on the tokio runtime
# else things will break in WASM builds
tokio = { version = "1.49.0", features = ["sync"] }
# lazy-regex = "^3.5"
tracing = { version = "^0", features = ["log", "attributes"] }
tracing-wasm = "^0"
tracing-subscriber = "^0"
futures = "0.3.30"
# unicode-segmentation = "1.12.0"
prost = "0.14.3"
hex = "0.4.3"
guard-clause = "1.0.0"
flume = "0.12.0"
rand = "0.10"
bs58 = "0.5.1"

# Dependencies non WASM builds
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# Dependencies for WASM builds only
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.85", features = ["console"] }

[dev-dependencies]
tokio-test = "^0.4"

[build-dependencies]
prost-build = "0.14.3"
