[package]
name = "intersect-glasses"
version = "0.2.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
intersect-core = { path = "../intersect-core", features = [
    "rt-wasm",
], default-features = false }
leptos = { version = "0.8.17", features = ["csr"] }
leptos_router = { version = "0.8.13" }
# leptos-use = { version = "0.13.6", features = ["use_cookie"] }
# phosphor-leptos = "0.8.0"
log = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
thiserror = "2.0.18"
futures = "0.3.30"
anyhow = "1.0.86"
lazy-regex = "3.6.0"
tokio = { version = "1.49.0", features = ["sync"] }
comrak = { version = "0.52.0", features = ["shortcodes"] }
# codee = "0.2.0"


[dev-dependencies]
wasm-bindgen = "^0.2"
wasm-bindgen-test = "^0.3"
web-sys = { version = "0.3.85", features = ["Document", "Window"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
# panic = "abort"

[package.metadata.leptos]
lib-profile-release = "wasm-release"
